# synthetic-aperature

./: .gitignore  CMakeLists.txt  README.md
lib/: SyntheticAperture.cpp  SyntheticAperture.h
src/: main.cpp
